<resources>
    <string name="openFileKey">Open file...</string>
    <string name="metaDataEditKey">Edit metadata...</string>
    <string name="midiToolsKey">Play/Export MIDI</string>
    <string name="viewMangaKey">View Manga...</string>
    <string name="viewBGKey">View Game BG...</string>
    <string name="editRecordKey">Edit Records</string>
    <string name="editMangaKey">Edit Mangas</string>
    <string name="unlockKey">Unlock...</string>
    <!-- Strings used for fragments for navigation -->
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->

    <!-- Messages Preferences -->

    <!-- Sync Preferences -->
    <string name="openRecentFileKey">Open recent file...</string>
    <string name="settingsKey">Settings...</string>
    <string name="exitKey">Exit</string>
    <string name="editGameKey">Edit Games</string>
    <string name="dsSaveKey">DS Save</string>
    <string name="wiiSaveKey">Wii Save</string>
    <string name="couldNotReadFileKey">It seems that the file which you opened could not be read or operated.</string>
    <string name="warningKey">Warning</string>
    <string name="backKey">Back</string>
    <string name="noHistoryKey">No open file history.</string>
    <string name="unlockGameKey">Unlock Games…</string>
    <string name="unlockRecordKey">Unlock Records…</string>
    <string name="unlockMangaKey">Unlock Mangas…</string>
    <string name="unlockMedalKey">Unlock Medals…</string>
    <string name="app_name">DIYEdit</string>
    <string name="okKey">OK</string>
    <string name="seriesNumberKey">Serial Number</string>
    <string name="unlockEditKey">Unlock</string>
    <string name="lockEditKey">Lock</string>
    <string name="nameKey">Name</string>
    <string name="commentKey">Comment</string>
    <string name="authorKey">Author</string>
    <string name="companyKey">Company</string>
    <string name="instructionKey">Game Instruction</string>
    <string name="dateKey">Date</string>
    <string name="gameDurationKey">Duration</string>
    <string name="shortKey">Short</string>
    <string name="longKey">Long</string>
    <string name="selfStyleKey">Self Style</string>
    <string name="iconColorKey">Icon Color</string>
    <string name="iconStyleKey">Icon Style</string>
    <string name="selfColorKey">Self Color</string>
    <string name="discardKey">Discard Changes</string>
    <string name="saveKey">Save</string>
    <string name="deleteMIOWaringKey">You are deleting a mio file. Are you sure?</string>
    <string name="serialNumberWrongKey">Wrong Format of Serial Number.</string>
    <string name="exportSuccessKey">Successfully exported requested item(s).</string>
    <string name="metadataEmptyKey">Empty Entry(ies) in Metadata.</string>
    <string name="appearanceKey">Appearance</string>
    <string name="behaviorKey">Behavior</string>
    <string name="themeModeKey">Theme Mode</string>
    <string name="aboutKey">About</string>
    <string name="previewKey">Preview</string>
    <string name="BGKey">BG</string>
    <string name="exportFileNameSetKey">Set export file name</string>
    <string name="languageSelectKey">Language Select</string>
    <string name="importKey">Import...</string>
    <string name="exportKey">Export...</string>
    <string name="deleteKey">Delete...</string>

    <string name="nullSlotKey">Null slot. Click to operate.</string>
    <string name="aboutTextKey">DIYEdit_Mobile is Android port of xperia64\'s DIYEdit.\\n\\nThanks to:\\n · FluidSynth provides the ability to play music by using a custom sf2 library.\\n · DIYEdit by xperia64 (bobmcjr) provides easy-to-use classes.\\n · Disk_Drive created the icons of the software.\\n · kshoji\'s JFugue-for-Android provides the ability to play and processes MIDI files.\\n · kshoji\'s javax.sound.midi-for-Android provides the support for Jfugue-for-Android.\\n · Christanes\' PhotoView provides easy zooming on comics, game backgrounds and game previews.\\n · Partially references to Creating a Fluidsynth Hello World App for Android -- Hector Ricardo \\n\\nDIYEdit_Mobile is a free software and licensed under the GPLv3 license. Please comply with local laws and regulations when using the Software.\\n\\nSoftware version 1.0.0\\nBuilt-in FluidSynth version 2.3.3</string>
    <string name="openSourceLicenseKey">Open Source Code License</string>
    <string name="cleanedKey">Cleaned.</string>
    <string name="numberRequiredKey">Please enter a positive integer.</string>
    <string name="storagePermissionRequireKey">Storage permission required. Please allow this permission</string>
    <string name="tryAgainKey">Please try again.</string>
    <string name="maxHistoryCountKey">Max history entries that will be stored</string>
    <string name="maxHistoryCountTitleKey">Max history count</string>
    <string name="cleanAllHistoryTitleKey">Clean all history entries</string>
    <string name="cleanAllHistoryKey">Clean all open file history entries</string>
    <string name="openAboutDialogKey">Open about window</string>
    <string name="showFullPathTitleKey">Show full file path</string>
    <string name="showFullPathOffKey">Show only file name for history entries</string>
    <string name="showFullPathOnKey">Show full file path for history entries</string>
    <string name="normalModeKey">Normal Mode</string>
    <string name="charLostModeKey">Char Lost Mode</string>
    <string name="title_activity_file_choose">Select...</string>
    <string name="chooseCurrentDirectory">Select Current Directory</string>
    <string name="exportFailedKey">Failed to export requested item(s).</string>
    <string name="timeSortededKey">Sort by time</string>
    <string name="nameSortededKey">Sort by name</string>
    <string name="reverseOrderKey">Reversed Order</string>
    <string name="historyTooExtremeKey">The max count of history entry is too big or too small.</string>
    <string name="normalOrderKey">Normal Order</string>
    <string name="hideHiddenFilesKey">Hide Hidden Files</string>
    <string name="showHiddenFilesKey">Show Hidden Files</string>
    <!-- Strings used for fragments for navigation -->

    <!-- Preference Titles -->

    <!-- Messages Preferences -->

    <!-- Sync Preferences -->

</resources>