<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.x8192Bit.DIYEdit_Mobile.UnlockFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Button
            android:id="@+id/unlockGames"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="unlockGame"
            android:text="@string/unlockGameKey" />

        <Button
            android:id="@+id/unlockMedals"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="unlockMedal"
            android:text="@string/unlockMedalKey" />

        <Button
            android:id="@+id/unlockMangas"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="unlockManga"
            android:text="@string/unlockMangaKey" />

        <Button
            android:id="@+id/unlockRecords"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="unlockRecord"
            android:text="@string/unlockRecordKey" />
    </LinearLayout>

</FrameLayout>