<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/metadata_fl"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="2dp"
    android:orientation="vertical"
    tools:context="com.x8192bit.diyeditmobile.fragments.MetadataEditFragment">

    <ScrollView
        android:id="@+id/metadata_sv"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/metadata_ll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/metadata_char_lost_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:text="@string/normalModeKey"
                android:textSize="16sp" />

            <TableLayout
                android:id="@+id/metadata_tl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:stretchColumns="0,1,2,3">

                <TableRow
                    android:id="@+id/metadata_serial_lock_tr"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_span="3">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/metadata_serial_ti"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="3dp"
                            android:layout_weight="1"
                            android:baselineAligned="true"
                            android:hint="@string/seriesNumberKey"
                            android:singleLine="true" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <LinearLayout
                        android:id="@+id/metadata_lock_ll"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/metadata_lock_tv"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />

                        <com.google.android.material.switchmaterial.SwitchMaterial
                            android:id="@+id/metadata_lock_sw"
                            style="@style/Widget.Material3.CompoundButton.MaterialSwitch"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="4dp"
                            android:layout_weight="1"
                            android:textOff="@string/unlockEditKey"
                            android:textOn="@string/lockEditKey"
                            app:showText="false" />
                    </LinearLayout>

                </TableRow>

                <TableRow
                    android:id="@+id/metadata_name_icon_tr"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_span="3"
                        app:counterEnabled="true"
                        app:counterMaxLength="12">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/metadata_name_ti"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="3dp"
                            android:hint="@string/nameKey"
                            android:maxLength="12"
                            android:singleLine="true" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <ImageView
                        android:id="@+id/metadata_icon_iv"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="4dp"
                        android:src="@drawable/spr_cart1"
                        tools:ignore="ContentDescription" />
                </TableRow>

                <TableRow
                    android:id="@+id/metadata_description_tr"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_span="4"
                        app:counterEnabled="true"
                        app:counterMaxLength="36">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/metadata_description_ti"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="3dp"
                            android:hint="@string/commentKey"
                            android:maxLength="36"
                            android:singleLine="true" />
                    </com.google.android.material.textfield.TextInputLayout>

                </TableRow>

                <TableRow
                    android:id="@+id/metadata_author_company_tr"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_span="2"
                        app:counterEnabled="true"
                        app:counterMaxLength="9">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/metadata_author_ti"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="3dp"
                            android:hint="@string/authorKey"
                            android:maxLength="9"
                            android:singleLine="true" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_span="2"
                        app:counterEnabled="true"
                        app:counterMaxLength="9">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/metadata_company_ti"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="3dp"
                            android:hint="@string/companyKey"
                            android:maxLength="9"
                            android:singleLine="true"
                            tools:ignore="TextContrastCheck" />
                    </com.google.android.material.textfield.TextInputLayout>

                </TableRow>

                <TableRow
                    android:id="@+id/metadata_command_date_tr"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_span="3"
                        app:counterEnabled="true"
                        app:counterMaxLength="12">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/metadata_command_ti"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="3dp"
                            android:hint="@string/instructionKey"
                            android:maxLength="12"
                            android:singleLine="true"
                            tools:ignore="TextContrastCheck" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/metadata_date_ti"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="3dp"
                            android:hint="@string/dateKey"
                            android:inputType="date" />
                    </com.google.android.material.textfield.TextInputLayout>

                </TableRow>

                <TableRow
                    android:id="@+id/metadata_time_tr"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/metadata_time_tv"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginStart="3pt"
                        android:layout_marginLeft="3pt"
                        android:gravity="center|left"
                        android:text="@string/gameDurationKey" />

                    <RadioGroup
                        android:id="@+id/metadata_time_rg"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_span="3"
                        android:baselineAligned="false"
                        android:orientation="horizontal">

                        <RadioButton
                            android:id="@+id/metadata_time_short_btn"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:minHeight="50dp"
                            android:text="@string/shortKey" />

                        <RadioButton
                            android:id="@+id/metadata_time_long_btn"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:minHeight="50dp"
                            android:text="@string/longKey" />

                        <RadioButton
                            android:id="@+id/metadata_time_boss_btn"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:minHeight="50dp"
                            android:text="BOSS" />
                    </RadioGroup>

                </TableRow>


            </TableLayout>

            <LinearLayout
                android:id="@+id/metadata_self_style_ll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/metadata_self_style_tv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="3pt"
                    android:layout_marginLeft="3pt"
                    android:layout_weight="3"
                    android:text="@string/selfStyleKey" />

                <Spinner
                    android:id="@+id/metadata_self_style_spinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:minHeight="50dp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/metadata_self_color_ll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/metadata_self_color_tv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="3pt"
                    android:layout_marginLeft="3pt"
                    android:layout_weight="3"
                    android:text="@string/selfColorKey" />

                <Spinner
                    android:id="@+id/metadata_self_color_spinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:minHeight="50dp"
                    tools:ignore="DuplicateSpeakableTextCheck" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/metadata_icon_style_ll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/metadata_icon_style_tv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="3pt"
                    android:layout_marginLeft="3pt"
                    android:layout_weight="3"
                    android:text="@string/iconStyleKey" />

                <Spinner
                    android:id="@+id/metadata_icon_style_spinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:minHeight="50dp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/metadata_icon_color_ll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/metadata_icon_color_tv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="3pt"
                    android:layout_marginLeft="3pt"
                    android:layout_weight="3"
                    android:text="@string/iconColorKey" />

                <Spinner
                    android:id="@+id/metadata_icon_color_spinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:entries="@array/diy_colors"
                    android:minHeight="50dp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/metadata_btn_ll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/metadata_discard_btn"
                    style="@style/Widget.Material3.Button.OutlinedButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:layout_marginEnd="2dp"
                    android:layout_marginRight="2dp"
                    android:layout_weight="1"
                    android:text="@string/discardKey"
                    app:cornerRadius="10dp" />

                <Button
                    android:id="@+id/metadata_save_btn"
                    style="@style/Widget.Material3.Button.OutlinedButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:layout_marginStart="2dp"
                    android:layout_marginLeft="2dp"
                    android:layout_weight="1"
                    android:text="@string/saveKey"
                    app:cornerRadius="10dp" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</FrameLayout>